--- a/packages/angular-lib/package.json
+++ b/packages/angular-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@innomotics/ix-angular-lib",
-  "version": "0.2.3",
+  "version": "0.0.1-alpha.0",
   "description": "> TODO: description",
   "author": "",
   "types": "dist/types/index.d.ts",
@@ -12,7 +12,7 @@
   "files": [
     "dist"
   ],
-  "private":false,
+  "private": false,
   "scripts": {
     "build": "ng-packagr -c tsconfig.json"
   },
@@ -20,11 +20,11 @@
     "ng-packagr": "^17.2.0"
   },
   "peerDependencies": {
+    "@angular/core": "17.2.3",
     "@innomotics/ix": "*",
-    "@innomotics/ix-fonts":"*",
-    "@angular/core":"17.2.3",
-    "typescript": "^5.3.3",
-    "@siemens/ix-icons": "^2.1.0"
+    "@innomotics/ix-fonts": "*",
+    "@siemens/ix-icons": "^2.1.0",
+    "typescript": "^5.3.3"
   },
   "publishConfig": {
     "access": "public"
