--- a/packages/fonts/package.json
+++ b/packages/fonts/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@innomotics/ix-fonts",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "description": "> TODO: description",
   "author": "ad001\\z003a0vy <Istvan.Herbak@evosoft.com>",
   "homepage": "",
@@ -20,8 +20,8 @@
   "scripts": {
     "build": "npm run sassbuild && npm run copyoutputs && npm run copyreadme",
     "sassbuild": "npx sass --style=compressed ./lib/styles",
-    "copyoutputs":" npx cpx \"./lib/**\" \"./dist/\"",
-    "copyreadme":"npx cpx readme.md \"../webdocs/docs/fonts\""
+    "copyoutputs": " npx cpx \"./lib/**\" \"./dist/\"",
+    "copyreadme": "npx cpx readme.md \"../webdocs/docs/fonts\""
   },
   "devDependencies": {
     "cpx2": "^7.0.1",
