--- a/packages/webdocs/package.json
+++ b/packages/webdocs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "webdocs",
-  "version": "0.0.0",
+  "version": "0.0.1-alpha.0",
   "private": true,
   "scripts": {
     "docusaurus": "docusaurus",
@@ -17,8 +17,8 @@
   "dependencies": {
     "@docusaurus/core": "3.1.1",
     "@docusaurus/preset-classic": "3.1.1",
-    "@innomotics/ix-react-lib": "*",
-    "@innomotics/ix-fonts":"*",
+    "@innomotics/ix-fonts": "^0.0.1-alpha.0",
+    "@innomotics/ix-react-lib": "^0.0.1-alpha.0",
     "@mdx-js/react": "^3.0.0",
     "@siemens/ix-icons": "^2.1.0",
     "clsx": "^2.0.0",
