Setting registry, ignoring .npmrc changes

--- a/packages/fonts/package.json
+++ b/packages/fonts/package.json
@@ -26,5 +26,9 @@
   "devDependencies": {
     "cpx2": "^7.0.1",
     "sass": "^1.71.1"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
