--- a/packages/react-lib/package.json
+++ b/packages/react-lib/package.json
@@ -21,7 +21,8 @@
     "tsc": "tsc -p . --outDir ./dist"
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "peerDependencies": {
     "@innomotics/ix": "*",
