--- a/packages/stencil-lib/package.json
+++ b/packages/stencil-lib/package.json
@@ -15,7 +15,8 @@
     "url": ""
   },
   "publishConfig": {
-    "access": "public"
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   },
   "files": [
     "dist/",
