--- a/packages/react-lib/package.json
+++ b/packages/react-lib/package.json
@@ -8,6 +8,7 @@
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/types/index.d.ts",
+  "private":false,
   "directories": {
     "lib": "lib",
     "test": "__tests__"
