--- a/packages/vue-lib/package.json
+++ b/packages/vue-lib/package.json
@@ -7,6 +7,7 @@
   "license": "ISC",
   "main": "dist/index.js",
   "types": "dist/index.js",
+  "private":false,
   "directories": {
     "lib": "lib",
     "test": "__tests__"
