Remove ix-icons lib.

--- a/packages/react-lib/package.json
+++ b/packages/react-lib/package.json
@@ -27,8 +27,7 @@
   },
   "peerDependencies": {
     "@innomotics/ix": "*",
-    "@innomotics/ix-fonts": "*",
-    "@siemens/ix-icons": "^2.1.0"
+    "@innomotics/ix-fonts": "*"
   },
   "devDependencies": {
     "@types/react": "^18.2.60",
