--- a/packages/react-lib/package.json
+++ b/packages/react-lib/package.json
@@ -8,7 +8,7 @@
   "main": "dist/index.js",
   "module": "dist/index.js",
   "types": "dist/types/index.d.ts",
-  "private":false,
+  "private": false,
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -31,8 +31,8 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.60",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "typescript": "^5.3.3"
   }
 }
