--- a/packages/vue-lib/package.json
+++ b/packages/vue-lib/package.json
@@ -7,7 +7,7 @@
   "license": "ISC",
   "main": "dist/index.js",
   "types": "dist/index.js",
-  "private":false,
+  "private": false,
   "directories": {
     "lib": "lib",
     "test": "__tests__"
@@ -21,7 +21,7 @@
     "tsc": "tsc -p . --outDir ./dist"
   },
   "devDependencies": {
-    "vue": "^3.4.21"
+    "vue": "3.4.21"
   },
   "publishConfig": {
     "access": "public",
