--- a/packages/fonts/package.json
+++ b/packages/fonts/package.json
@@ -17,10 +17,11 @@
     "url": "https://Innomotics-AKS@dev.azure.com/Innomotics-AKS/InnomoticsSalesTools/_git/inno-UX"
   },
   "scripts": {
-    "build": "npm run sassbuild && npm run copyoutputs && npm run copyreadme",
+    "build": "npm run sassbuild && npm run copyoutputs && npm run copyreadme && npm run copyfonts",
     "sassbuild": "npx sass --style=compressed ./lib/styles",
     "copyoutputs": " npx cpx \"./lib/**\" \"./dist/\"",
-    "copyreadme": "npx cpx readme.md \"../webdocs/docs/fonts\""
+    "copyreadme": "npx cpx readme.md \"../webdocs/docs/fonts\"",
+    "copyfonts": "npx cpx \"./lib/font/**\" \"../webdocs/src\""
   },
   "devDependencies": {
     "cpx2": "^7.0.1",
