--- a/package.json
+++ b/package.json
@@ -9,5 +9,8 @@
     "lerna": "^8.1.2",
     "lerna-update-wizard": "^1.1.2",
     "typescript": "^5.3.3"
+  },
+  "dependencies": {
+    "npm": "^10.5.0"
   }
 }
