--- a/packages/stencil-lib/package.json
+++ b/packages/stencil-lib/package.json
@@ -29,7 +29,8 @@
     "start": "stencil build --dev --watch --serve",
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
-    "generate": "stencil generate"
+    "generate": "stencil generate",
+    "stencil": "stencil"
   },
   "dependencies": {
     "@floating-ui/dom": "^1.6.3",
