--- a/packages/stencil-lib/package.json
+++ b/packages/stencil-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@innomotics/ix",
-  "version": "0.0.1-alpha.1",
+  "version": "0.0.1-alpha.2",
   "description": "Stencil Component Starter",
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
@@ -35,7 +35,7 @@
   "dependencies": {
     "@floating-ui/dom": "^1.6.3",
     "@innomotics/ix-fonts": "*",
-    "@innomotics/ix-icons": "*",
+    "@innomotics/ix-icons": "^0.0.1-alpha.2",
     "@stencil/core": "^4.12.5",
     "@stencil/sass": "^3.0.10",
     "animejs": "^3.2.2"
