--- a/packages/icon-lib/package.json
+++ b/packages/icon-lib/package.json
@@ -30,5 +30,9 @@
   },
   "devDependencies": {
     "ts-node": "^10.9.2"
+  },
+  "publishConfig": {
+    "access": "public",
+    "registry": "https://registry.npmjs.org/"
   }
 }
