added label ti select item

--- a/packages/stencil-lib/package.json
+++ b/packages/stencil-lib/package.json
@@ -21,7 +21,8 @@
   },
   "files": [
     "dist/",
-    "loader/"
+    "loader/",
+    "components/"
   ],
   "scripts": {
     "copyreadmes": "npx cpx \"./src/components/**/*.md\" \"../webdocs/docs/components\"",
