--- a/packages/angular-lib/package.json
+++ b/packages/angular-lib/package.json
@@ -16,6 +16,23 @@
   "scripts": {
     "build": "ng-packagr -c tsconfig.json"
   },
+  "module": "dist/fesm2012/innomotics-ix-angular-lib.mjs",
+  "esm2022": "dist/esm2022/innomotics-ix-angular-lib.mjs",
+  "fesm2022": "dist/fesm2022/innomotics-ix-angular-lib.mjs",
+  "typings": "dist/index.d.ts",
+  "exports": {
+    "./package.json": {
+      "default": "./package.json"
+    },
+    "./dist": {
+      "types": "./dist/index.d.ts",
+      "esm2022": "./dist/esm2020/innomotics-ix-angular-lib.mjs",
+      "fesm2022": "./dist/fesm2022/innomotics-ix-angular-lib.mjs",
+      "node": "./dist/fesm2022/innomotics-ix-angular-lib.mjs",
+      "default": "./dist/fesm2022/innomotics-ix-angular-lib.mjs"
+    }
+  },
+
   "devDependencies": {
     "ng-packagr": "^17.2.0"
   },
