--- a/packages/vue-lib/package.json
+++ b/packages/vue-lib/package.json
@@ -20,6 +20,9 @@
     "build": "npm run tsc",
     "tsc": "tsc -p . --outDir ./dist"
   },
+  "dependencies": {
+    "@innomotics/ix": "^0.0.1-alpha.2"
+  },
   "devDependencies": {
     "vue": "3.4.21"
   },
@@ -28,7 +31,8 @@
     "registry": "https://registry.npmjs.org/"
   },
   "peerDependencies": {
-    "@innomotics/ix": "*",
-    "@innomotics/ix-fonts": "*"
+    "@innomotics/ix": "^0.0.1-alpha.2",
+    "@innomotics/ix-fonts": "^0.0.1-alpha.2",
+    "@innomotics/ix-icons": "^0.0.1-alpha.2"
   }
 }
