--- a/packages/angular-lib/tsconfig.json
+++ b/packages/angular-lib/tsconfig.json
@@ -21,8 +21,8 @@
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
-    "target": "ES2022",
-    "module": "ES2022",
+    "target": "ES2017",
+    "module": "ESNext",
     "useDefineForClassFields": false,
     "lib": [
       "ES2022",
