--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,7 +40,24 @@ jobs:
       - uses: actions/checkout@v4
       - uses: ./.github/workflows/actions/build-cache
       - uses: ./.github/workflows/actions/build
+      - name: Upload docs
+        uses: actions/upload-pages-artifact@v3.0.1
+        with:
+          path: packages/webdocs/build
 
+  deploy-docs:
+    runs-on: ubuntu-latest
+    needs: [build]
+    permissions:
+      pages: write      # to deploy to Pages
+      id-token: write   # to verify the deployment originates from an appropriate source
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        uses: actions/deploy-pages@v4  
+                  
   upload-artifacts:
     runs-on: ubuntu-latest
     needs: [build]
