--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,6 +46,7 @@ jobs:
           path: packages/webdocs/build
 
   deploy-docs:
+    if: ${{ (github.repository == 'innomotics/IX') && (github.ref == 'refs/heads/master') }}
     runs-on: ubuntu-latest
     needs: [build]
     permissions:
@@ -57,7 +58,7 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         uses: actions/deploy-pages@v4  
-                  
+
   upload-artifacts:
     runs-on: ubuntu-latest
     needs: [build]
