--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -46,7 +46,7 @@ jobs:
           path: packages/webdocs/build
 
   deploy-docs:
-    if: ${{ (github.repository == 'innomotics/IX') && (github.ref == 'refs/heads/master') }}
+    if: ${{ (github.repository == 'innomotics/IX') && (github.ref == 'refs/heads/main') }}
     runs-on: ubuntu-latest
     needs: [build]
     permissions:
