icons in the docs

--- a/packages/icon-lib/package.json
+++ b/packages/icon-lib/package.json
@@ -17,10 +17,11 @@
     "url": "git+https://github.com/innomotics/IX.git"
   },
   "scripts": {
-    "build": "npm run generateIconModule && npm run sassbuild && npm run copyoutputs",
+    "build": "npm run generateIconModule && npm run sassbuild && npm run copyoutputs && npm run copyreadme",
     "sassbuild": "npx sass --style=compressed ./lib/styles",
     "copyoutputs": " npx cpx \"./lib/**\" \"./dist/\"",
-    "generateIconModule": "npx ts-node generator.ts"
+    "generateIconModule": "npx ts-node generator.ts",
+    "copyreadme": "npx cpx readme.md \"../webdocs/docs/icons\""
   },
   "bugs": {
     "url": "https://github.com/innomotics/IX/issues"
