--- a/packages/react-lib/package.json
+++ b/packages/react-lib/package.json
@@ -14,7 +14,7 @@
     "test": "__tests__"
   },
   "files": [
-    "dist"
+    "dist/"
   ],
   "scripts": {
     "test": "node ./__tests__/react-library.test.js",
