--- a/packages/angular-lib/package.json
+++ b/packages/angular-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@innomotics/ix-angular-lib",
-  "version": "0.0.1alpha-18",
+  "version": "0.0.1.alpha-18",
   "description": "> TODO: description",
   "author": "",
   "types": "dist/types/index.d.ts",
@@ -30,16 +30,16 @@
     }
   },
   "dependencies": {
-    "@innomotics/ix": "^0.0.1alpha-18"
+    "@innomotics/ix": "^0.0.1.alpha-18"
   },
   "devDependencies": {
     "ng-packagr": "^17.2.0"
   },
   "peerDependencies": {
     "@angular/core": "17.2.3",
-    "@innomotics/ix": "^0.0.1alpha-18",
-    "@innomotics/ix-fonts": "^0.0.1alpha-18",
-    "@innomotics/ix-icons": "^0.0.1alpha-18",
+    "@innomotics/ix": "^0.0.1.alpha-18",
+    "@innomotics/ix-fonts": "^0.0.1.alpha-18",
+    "@innomotics/ix-icons": "^0.0.1.alpha-18",
     "typescript": "^5.3.3"
   },
   "publishConfig": {
