--- a/packages/vue-lib/package.json
+++ b/packages/vue-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@innomotics/ix-vue-lib",
-  "version": "0.0.1alpha-18",
+  "version": "0.0.1.alpha-18",
   "description": "> TODO: description",
   "author": "ad001\\z003a0vy <Istvan.Herbak@evosoft.com>",
   "homepage": "",
@@ -21,7 +21,7 @@
     "tsc": "tsc -p . --outDir ./dist"
   },
   "dependencies": {
-    "@innomotics/ix": "^0.0.1alpha-18"
+    "@innomotics/ix": "^0.0.1.alpha-18"
   },
   "devDependencies": {
     "vue": "3.4.21"
@@ -31,8 +31,8 @@
     "registry": "https://registry.npmjs.org/"
   },
   "peerDependencies": {
-    "@innomotics/ix": "^0.0.1alpha-18",
-    "@innomotics/ix-fonts": "^0.0.1alpha-18",
-    "@innomotics/ix-icons": "^0.0.1alpha-18"
+    "@innomotics/ix": "^0.0.1.alpha-18",
+    "@innomotics/ix-fonts": "^0.0.1.alpha-18",
+    "@innomotics/ix-icons": "^0.0.1.alpha-18"
   }
 }
