--- a/packages/stencil-lib/package.json
+++ b/packages/stencil-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@innomotics/ix",
-  "version": "0.0.1.alpha-18",
+  "version": "0.0.1-alpha-18",
   "description": "Stencil Component Starter",
   "main": "dist/index.cjs.js",
   "module": "dist/index.js",
@@ -34,8 +34,8 @@
   },
   "dependencies": {
     "@floating-ui/dom": "^1.6.3",
-    "@innomotics/ix-fonts": "^0.0.1.alpha-18",
-    "@innomotics/ix-icons": "^0.0.1.alpha-18",
+    "@innomotics/ix-fonts": "^0.0.1-alpha-18",
+    "@innomotics/ix-icons": "^0.0.1-alpha-18",
     "@stencil/core": "^4.12.5",
     "@stencil/sass": "^3.0.10",
     "animejs": "^3.2.2"
@@ -55,8 +55,8 @@
     "puppeteer": "^21.9.0"
   },
   "peerDependencies": {
-    "@innomotics/ix-fonts": "^0.0.1.alpha-18",
-    "@innomotics/ix-icons": "^0.0.1.alpha-18"
+    "@innomotics/ix-fonts": "^0.0.1-alpha-18",
+    "@innomotics/ix-icons": "^0.0.1-alpha-18"
   },
   "license": "MIT"
 }
