--- a/packages/stencil-lib/tsconfig.json
+++ b/packages/stencil-lib/tsconfig.json
@@ -21,5 +21,11 @@
   ],
   "exclude": [
     "node_modules"
-  ]
+  ],
+  "ts-node": {
+    "compilerOptions": {
+      "module": "CommonJS",
+      "moduleResolution": "Node"
+    }
+  }
 }
