--- a/packages/angular-lib/package.json
+++ b/packages/angular-lib/package.json
@@ -36,7 +36,7 @@
     "ng-packagr": "^17.2.0"
   },
   "peerDependencies": {
-    "@angular/core": "17.2.3",
+    "@angular/core": "^17.2.3",
     "@innomotics/ix": "^0.0.1-alpha-21",
     "@innomotics/ix-fonts": "^0.0.1-alpha-21",
     "@innomotics/ix-icons": "^0.0.1-alpha-21",
