--- a/packages/webdocs/package.json
+++ b/packages/webdocs/package.json
@@ -15,20 +15,20 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "3.1.1",
-    "@docusaurus/preset-classic": "3.1.1",
+    "@docusaurus/core": "3.2.1",
+    "@docusaurus/preset-classic": "3.2.1",
     "@innomotics/ix-fonts": "^0.0.1-alpha-25",
     "@innomotics/ix-react-lib": "^0.0.1-alpha-25",
-    "@mdx-js/react": "^3.0.0",
+    "@mdx-js/react": "3.0.1",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.1.1",
-    "@docusaurus/tsconfig": "3.1.1",
-    "@docusaurus/types": "^3.1.1",
+    "@docusaurus/module-type-aliases": "3.2.1",
+    "@docusaurus/tsconfig": "3.2.1",
+    "@docusaurus/types": "3.2.1",
     "docusaurus-plugin-sass": "^0.2.5",
     "typescript": "~5.2.2"
   },
