--- a/packages/angular-lib/package.json
+++ b/packages/angular-lib/package.json
@@ -33,10 +33,10 @@
     "@innomotics/ix": "^0.0.1-alpha-25"
   },
   "devDependencies": {
-    "ng-packagr": "^17.2.0"
+    "ng-packagr": "^17.3.0"
   },
   "peerDependencies": {
-    "@angular/core": "17.3.5",
+    "@angular/core": "^17.3.5",
     "@innomotics/ix": "^0.0.1-alpha-25",
     "@innomotics/ix-fonts": "^0.0.1-alpha-25",
     "@innomotics/ix-icons": "^0.0.1-alpha-25",
