--- a/packages/react-lib/package.json
+++ b/packages/react-lib/package.json
@@ -35,8 +35,8 @@
   },
   "devDependencies": {
     "@types/react": "^18.2.60",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "typescript": "^5.3.3"
   }
 }
