--- a/packages/react-lib/package.json
+++ b/packages/react-lib/package.json
@@ -37,6 +37,6 @@
     "@types/react": "^18.2.60",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "typescript": "^5.3.3"
+    "typescript": "5.4.5"
   }
 }
