--- a/packages/webdocs/package.json
+++ b/packages/webdocs/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@docusaurus/core": "3.2.1",
     "@docusaurus/preset-classic": "3.2.1",
+    "@docusaurus/theme-mermaid": "^3.2.1",
     "@innomotics/ix-fonts": "^0.0.1-alpha-31",
     "@innomotics/ix-react-lib": "^0.0.1-alpha-31",
     "@mdx-js/react": "3.0.1",
