--- a/packages/angular-lib/package.json
+++ b/packages/angular-lib/package.json
@@ -37,6 +37,7 @@
   },
   "peerDependencies": {
     "@angular/core": "^17.3.5",
+    "@angular/forms": "17.3.5",
     "@innomotics/ix": "^0.0.1-alpha-32",
     "@innomotics/ix-fonts": "^0.0.1-alpha-32",
     "@innomotics/ix-icons": "^0.0.1-alpha-32",
