--- a/packages/webdocs/package.json
+++ b/packages/webdocs/package.json
@@ -23,13 +23,14 @@
     "@mdx-js/react": "3.0.1",
     "clsx": "^2.0.0",
     "prism-react-renderer": "^2.3.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.2.1",
     "@docusaurus/tsconfig": "3.2.1",
     "@docusaurus/types": "3.2.1",
+    "@types/react": "^18.2.0",
     "docusaurus-plugin-sass": "^0.2.5",
     "typescript": "5.4.5"
   },
