--- a/packages/webdocs/package.json
+++ b/packages/webdocs/package.json
@@ -15,9 +15,9 @@
     "typecheck": "tsc"
   },
   "dependencies": {
-    "@docusaurus/core": "3.2.1",
-    "@docusaurus/preset-classic": "3.2.1",
-    "@docusaurus/theme-mermaid": "^3.2.1",
+    "@docusaurus/core": "^3.3.2",
+    "@docusaurus/preset-classic": "^3.3.2",
+    "@docusaurus/theme-mermaid": "^3.3.2",
     "@innomotics/brand-experience-fonts": "^0.0.1-alpha-32",
     "@innomotics/brand-experience-react-lib": "^0.0.1-alpha-32",
     "@mdx-js/react": "3.0.1",
@@ -27,9 +27,9 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "3.2.1",
-    "@docusaurus/tsconfig": "3.2.1",
-    "@docusaurus/types": "3.2.1",
+    "@docusaurus/module-type-aliases": "^3.3.2",
+    "@docusaurus/tsconfig": "^3.3.2",
+    "@docusaurus/types": "^3.3.2",
     "@types/react": "^18.2.0",
     "docusaurus-plugin-sass": "^0.2.5",
     "typescript": "5.4.5"
