--- a/.github/workflows/actions/install/action.yml
+++ b/.github/workflows/actions/install/action.yml
@@ -12,7 +12,7 @@ runs:
     - uses: actions/cache@v4
       id: cache
       with:
-        key: npm-${{ runner.os }}-modules-${{ hashFiles('package-lock.json') }}
+        key: npm-${{ runner.os }}-modules-${{ hashFiles('package.json') }}
         path: |
           node_modules
           packages/**/node_modules
