--- a/packages/stencil-lib/package.json
+++ b/packages/stencil-lib/package.json
@@ -40,7 +40,10 @@
     "@stencil/core": "^4.18.0",
     "@stencil/sass": "^3.0.11",
     "animejs": "^3.2.2",
-    "luxon": "3.4.4"
+    "luxon": "3.4.4",
+    "resize-observer-polyfill": "^1.5.1",
+    "simplebar": "^6.2.6",
+    "simplebar-react": "^3.2.5"
   },
   "devDependencies": {
     "@stencil-community/postcss": "^2.2.0",
