--- a/packages/stencil-lib/package.json
+++ b/packages/stencil-lib/package.json
@@ -42,8 +42,8 @@
     "animejs": "^3.2.2",
     "luxon": "3.4.4",
     "resize-observer-polyfill": "^1.5.1",
-    "simplebar": "^6.2.6",
-    "simplebar-react": "^3.2.5"
+    "sanitize-html": "^2.13.0",
+    "simplebar": "^6.2.6"
   },
   "devDependencies": {
     "@stencil-community/postcss": "^2.2.0",
@@ -54,6 +54,7 @@
     "@types/jest": "^29.5.6",
     "@types/luxon": "^3.4.2",
     "@types/node": "^16.18.11",
+    "@types/sanitize-html": "^2.11.0",
     "autoprefixer": "^10.4.17",
     "cpx2": "^7.0.1",
     "jest": "^29.7.0",
