Fix once more package.json hash

--- a/.github/workflows/actions/install/action.yml
+++ b/.github/workflows/actions/install/action.yml
@@ -12,7 +12,7 @@ runs:
     - uses: actions/cache@v4
       id: cache
       with:
-        key: npm-${{ runner.os }}-modules-${{ hashFiles('package.json', 'packages/**/package.json', '!**/dist/**/*') }}
+        key: npm-${{ runner.os }}-modules-${{ hashFiles('package.json', 'packages/**/package.json', '!**/dist/**/*', '!**/loader/**/*') }}
         path: |
           node_modules
           packages/**/node_modules
