--- a/packages/stencil-lib/package.json
+++ b/packages/stencil-lib/package.json
@@ -34,7 +34,7 @@
     "stencil": "stencil"
   },
   "dependencies": {
-    "@floating-ui/dom": "^1.6.3",
+    "@floating-ui/dom": "1.6.5",
     "@innomotics/brand-experience-fonts": "^0.0.1-alpha-71",
     "@innomotics/brand-experience-icons": "^0.0.1-alpha-71",
     "@stencil/core": "^4.18.0",
