--- a/packages/stencil-lib/package.json
+++ b/packages/stencil-lib/package.json
@@ -37,7 +37,7 @@
     "@floating-ui/dom": "1.6.8",
     "@innomotics/brand-experience-fonts": "^0.0.2-beta-2",
     "@innomotics/brand-experience-icons": "^0.0.2-beta-2",
-    "@stencil/core": "^4.18.0",
+    "@stencil/core": "4.20.0",
     "@stencil/sass": "^3.0.11",
     "animejs": "^3.2.2",
     "luxon": "3.4.4",
