--- a/packages/icon-lib/package.json
+++ b/packages/icon-lib/package.json
@@ -9,18 +9,16 @@
   "directories": {
     "lib": "lib"
   },
-  "files": [
-    "dist/"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/innomotics/brand-experience.git"
   },
   "scripts": {
-    "build": "npm run generateIconModule && npm run copyoutputs && npm run copyreadme",
+    "build": "npm run generateIconModule && npm run copyoutputs && npm run copyreadme && npm run copypackagejson",
     "copyoutputs": " npx cpx \"./lib/**\" \"./dist/\"",
     "generateIconModule": "npx ts-node generator.ts",
-    "copyreadme": "npx cpx readme.md \"../webdocs/docs/icons\""
+    "copyreadme": "npx cpx readme.md \"../webdocs/docs/icons\"",
+    "copypackagejson": "npx cpx package.json \"./dist/\""
   },
   "bugs": {
     "url": "https://github.com/innomotics/brand-experience/issues"
@@ -32,5 +30,6 @@
   "publishConfig": {
     "access": "public",
     "registry": "https://registry.npmjs.org/"
-  }
+  },
+  "gitHead": "83e4c1ac45c715589dc05940a8a6344ea724a9fe"
 }
