--- a/packages/vue-lib/package.json
+++ b/packages/vue-lib/package.json
@@ -8,17 +8,11 @@
   "main": "dist/index.js",
   "types": "dist/index.js",
   "private": false,
-  "directories": {
-    "lib": "lib",
-    "test": "__tests__"
-  },
-  "files": [
-    "dist/"
-  ],
   "scripts": {
     "test": "node ./__tests__/vue-lib.test.js",
-    "build": "npm run tsc",
-    "tsc": "tsc -p . --outDir ./dist"
+    "build": "npm run tsc && npm run copypackagejson",
+    "tsc": "tsc -p . --outDir ./dist",
+    "copypackagejson": "npx cpx package.json \"./dist/\""
   },
   "dependencies": {
     "@innomotics/brand-experience": "^0.0.2-beta-4"
@@ -34,5 +28,6 @@
     "@innomotics/brand-experience": "^0.0.2-beta-4",
     "@innomotics/brand-experience-fonts": "^0.0.2-beta-4",
     "@innomotics/brand-experience-icons": "^0.0.2-beta-4"
-  }
+  },
+  "gitHead": "83e4c1ac45c715589dc05940a8a6344ea724a9fe"
 }
