using lerna to copy assets into dist folder

--- a/packages/fonts/package.json
+++ b/packages/fonts/package.json
@@ -1,24 +1,33 @@
 {
   "name": "@innomotics/brand-experience-fonts",
   "version": "0.0.2-beta-4",
+  "lerna":{
+    "command":{
+      "publish":
+      {
+        "directory":"./dist",
+        "assets":[
+          "README.md",
+          "package.json",
+          "LICENSE.md"
+        ]
+      }
+    }
+  },
   "description": "> TODO: description",
   "author": "ad001\\z003a0vy <Istvan.Herbak@evosoft.com>",
   "homepage": "",
   "license": "MIT",
   "private": false,
-  "directories": {
-    "lib": "lib"
-  },
   "repository": {
     "type": "git",
     "url": "https://github.com/innomotics/brand-experience"
   },
   "scripts": {
-    "build": "npm run copyoutputs && npm run copyreadme && npm run copyfonts && npm run copypackagejson",
+    "build": "npm run copyoutputs && npm run copyreadme && npm run copyfonts",
     "copyoutputs": " npx cpx \"./lib/**\" \"./dist/\"",
     "copyreadme": "npx cpx readme.md \"../webdocs/docs/fonts\"",
-    "copyfonts": "npx cpx \"./lib/font/**\" \"../webdocs/src\"",
-    "copypackagejson": "npx cpx package.json \"./dist/\""
+    "copyfonts": "npx cpx \"./lib/font/**\" \"../webdocs/src\""
   },
   "devDependencies": {
     "cpx2": "^7.0.1"
@@ -27,5 +36,5 @@
     "access": "public",
     "registry": "https://registry.npmjs.org/"
   },
-  "gitHead": "83e4c1ac45c715589dc05940a8a6344ea724a9fe"
+  "gitHead": "1f2bb5e94a4805217564aad49dfaa174b10e6e18"
 }
