--- a/packages/react-lib/package.json
+++ b/packages/react-lib/package.json
@@ -1,6 +1,19 @@
 {
   "name": "@innomotics/brand-experience-react-lib",
   "version": "0.0.2-beta-4",
+  "lerna":{
+    "command":{
+      "publish":
+      {
+        "directory":"./dist",
+        "assets":[
+          "README.md",
+          "package.json",
+          "LICENSE.md"
+        ]
+      }
+    }
+  },
   "description": "> TODO: description",
   "author": "ad001\\z003a0vy <Istvan.Herbak@evosoft.com>",
   "homepage": "",
@@ -11,9 +24,8 @@
   "private": false,
   "scripts": {
     "test": "node ./__tests__/react-library.test.js",
-    "build": "npm run tsc && npm run copypackagejson",
-    "tsc": "tsc -p . --outDir ./dist",
-    "copypackagejson": "npx cpx package.json \"./dist/\""
+    "build": "npm run tsc",
+    "tsc": "tsc -p . --outDir ./dist"
   },
   "publishConfig": {
     "access": "public",
@@ -33,5 +45,5 @@
     "react-dom": "^18.2.0",
     "typescript": "5.4.5"
   },
-  "gitHead": "83e4c1ac45c715589dc05940a8a6344ea724a9fe"
+  "gitHead": "1f2bb5e94a4805217564aad49dfaa174b10e6e18"
 }
