--- a/packages/react-lib/package.json
+++ b/packages/react-lib/package.json
@@ -1,12 +1,11 @@
 {
   "name": "@innomotics/brand-experience-react-lib",
   "version": "0.0.2-beta-4",
-  "lerna":{
-    "command":{
-      "publish":
-      {
-        "directory":"./dist",
-        "assets":[
+  "lerna": {
+    "command": {
+      "publish": {
+        "directory": "./dist",
+        "assets": [
           "README.md",
           "package.json",
           "LICENSE.md"
