--- a/packages/react-lib/package.json
+++ b/packages/react-lib/package.json
@@ -21,6 +21,13 @@
   "module": "dist/index.js",
   "types": "dist/types/index.d.ts",
   "private": false,
+  "directories": {
+    "lib": "lib",
+    "test": "__tests__"
+  },
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "test": "node ./__tests__/react-library.test.js",
     "build": "npm run tsc",
