--- a/packages/vue-lib/package.json
+++ b/packages/vue-lib/package.json
@@ -21,6 +21,13 @@
   "main": "dist/index.js",
   "types": "dist/index.js",
   "private": false,
+  "directories": {
+    "lib": "lib",
+    "test": "__tests__"
+  },
+  "files": [
+    "dist/"
+  ],
   "scripts": {
     "test": "node ./__tests__/vue-lib.test.js",
     "build": "npm run tsc",
