--- a/packages/icon-lib/package.json
+++ b/packages/icon-lib/package.json
@@ -1,19 +1,6 @@
 {
   "name": "@innomotics/brand-experience-icons",
-  "version": "0.0.2-beta-4",
-  "lerna":{
-    "command":{
-      "publish":
-      {
-        "directory":"./dist",
-        "assets":[
-          "README.md",
-          "package.json",
-          "LICENSE.md"
-        ]
-      }
-    }
-  },
+  "version": "0.0.2-beta-3",
   "description": "> TODO: description",
   "author": "ad001\\z003a0vy <Istvan.Herbak@evosoft.com>",
   "homepage": "https://github.com/innomotics/brand-experience#readme",
@@ -22,6 +9,9 @@
   "directories": {
     "lib": "lib"
   },
+  "files": [
+    "dist/"
+  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/innomotics/brand-experience.git"
@@ -41,8 +31,6 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/",
-    "directory": "dist"
-  },
-  "gitHead": "1f2bb5e94a4805217564aad49dfaa174b10e6e18"
+    "registry": "https://registry.npmjs.org/"
+  }
 }
