--- a/packages/stencil-lib/package.json
+++ b/packages/stencil-lib/package.json
@@ -34,11 +34,11 @@
     "stencil": "stencil"
   },
   "dependencies": {
-    "@floating-ui/dom": "1.6.8",
+    "@floating-ui/dom": "^1.6.11",
     "@innomotics/brand-experience-fonts": "^0.0.2-beta-3",
     "@innomotics/brand-experience-icons": "^0.0.2-beta-3",
     "@stencil/core": "^4.21.0",
-    "@stencil/sass": "^3.0.11",
+    "@stencil/sass": "^3.0.12",
     "animejs": "^3.2.2",
     "luxon": "3.4.4",
     "resize-observer-polyfill": "^1.5.1",
@@ -47,9 +47,9 @@
   },
   "devDependencies": {
     "@stencil-community/postcss": "^2.2.0",
-    "@stencil/angular-output-target": "^0.8.4",
-    "@stencil/react-output-target": "^0.5.3",
-    "@stencil/vue-output-target": "^0.8.8",
+    "@stencil/angular-output-target": "0.9.0",
+    "@stencil/react-output-target": "^0.7.1",
+    "@stencil/vue-output-target": "^0.8.9",
     "@types/autoprefixer": "^10.2.0",
     "@types/jest": "^29.5.6",
     "@types/luxon": "^3.4.2",
