--- a/packages/angular-lib/package.json
+++ b/packages/angular-lib/package.json
@@ -46,6 +46,6 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "registry": "http://localhost:4873"
   }
 }
