--- a/packages/stencil-lib/package.json
+++ b/packages/stencil-lib/package.json
@@ -17,7 +17,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "registry": "http://localhost:4873"
   },
   "files": [
     "dist/",
