--- a/packages/angular-lib/package.json
+++ b/packages/angular-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@innomotics/brand-experience-angular-lib",
-  "version": "0.0.2-beta-21",
+  "version": "0.0.2-beta-12",
   "description": "> TODO: description",
   "author": "",
   "types": "dist/types/index.d.ts",
@@ -30,7 +30,7 @@
     }
   },
   "dependencies": {
-    "@innomotics/brand-experience": "^0.0.2-beta-21"
+    "@innomotics/brand-experience": "^0.0.2-beta-12"
   },
   "devDependencies": {
     "ng-packagr": "^17.3.0 || ^18.0.0"
@@ -39,13 +39,13 @@
     "@angular/common": "^17.3.5 || ^18.0.0",
     "@angular/core": "^17.3.5 || ^18.0.0",
     "@angular/forms": "^17.3.5 || ^18.0.0",
-    "@innomotics/brand-experience": "^0.0.2-beta-21",
-    "@innomotics/brand-experience-fonts": "^0.0.2-beta-21",
-    "@innomotics/brand-experience-icons": "^0.0.2-beta-21",
+    "@innomotics/brand-experience": "^0.0.2-beta-12",
+    "@innomotics/brand-experience-fonts": "^0.0.2-beta-12",
+    "@innomotics/brand-experience-icons": "^0.0.2-beta-12",
     "typescript": "^5.3.3"
   },
   "publishConfig": {
     "access": "public",
-    "registry": "http://localhost:4873"
+    "registry": "https://registry.npmjs.org/"
   }
 }
