--- a/packages/react-lib/package.json
+++ b/packages/react-lib/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@innomotics/brand-experience-react-lib",
-  "version": "0.0.2-beta-21",
+  "version": "0.0.2-beta-12",
   "description": "> TODO: description",
   "author": "ad001\\z003a0vy <Istvan.Herbak@evosoft.com>",
   "homepage": "",
@@ -23,15 +23,15 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "http://localhost:4873"
+    "registry": "https://registry.npmjs.org/"
   },
   "dependencies": {
-    "@innomotics/brand-experience": "^0.0.2-beta-21"
+    "@innomotics/brand-experience": "^0.0.2-beta-12"
   },
   "peerDependencies": {
-    "@innomotics/brand-experience": "^0.0.2-beta-21",
-    "@innomotics/brand-experience-fonts": "^0.0.2-beta-21",
-    "@innomotics/brand-experience-icons": "^0.0.2-beta-21"
+    "@innomotics/brand-experience": "^0.0.2-beta-12",
+    "@innomotics/brand-experience-fonts": "^0.0.2-beta-12",
+    "@innomotics/brand-experience-icons": "^0.0.2-beta-12"
   },
   "devDependencies": {
     "@types/react": "^18.2.60",
