--- a/packages/fonts/package.json
+++ b/packages/fonts/package.json
@@ -27,6 +27,6 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "registry": "http://localhost:4873/"
   }
 }
