--- a/packages/react-lib/package.json
+++ b/packages/react-lib/package.json
@@ -23,7 +23,7 @@
   },
   "publishConfig": {
     "access": "public",
-    "registry": "https://registry.npmjs.org/"
+    "registry": "http://localhost:4873/"
   },
   "dependencies": {
     "@innomotics/brand-experience": "^0.0.2-beta-12"
