--- a/packages/react-lib/package.json
+++ b/packages/react-lib/package.json
@@ -38,5 +38,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "typescript": "5.4.5"
-  }
+  },
+  "gitHead": "53bcad74d4025878a794faa22eba9012467ef380"
 }
