--- a/packages/vue-lib/package.json
+++ b/packages/vue-lib/package.json
@@ -34,5 +34,6 @@
     "@innomotics/brand-experience": "^0.0.2-beta-13",
     "@innomotics/brand-experience-fonts": "^0.0.2-beta-13",
     "@innomotics/brand-experience-icons": "^0.0.2-beta-13"
-  }
+  },
+  "gitHead": "53bcad74d4025878a794faa22eba9012467ef380"
 }
