--- a/packages/icon-lib/package.json
+++ b/packages/icon-lib/package.json
@@ -22,9 +22,7 @@
     "generateIconModule": "npx ts-node generator.ts",
     "copyreadme": "npx cpx readme.md \"../webdocs/docs/icons\"",
     "copyicons": "npx cpx  \"./downloadoutput/**\" \"../webdocs/static/svg\"",
-    "prepublishOnly": "npm run copypackageassets",
-    "copypackageassets": "npx cpx package.json \"./dist\" && npx cpx *.md \"./dist\""
-
+    "prepublishOnly": "npx cpx package_dist.json \"./dist\" && npx cpx *.md \"./dist\""
   },
   "bugs": {
     "url": "https://github.com/innomotics/brand-experience/issues"
@@ -41,5 +39,5 @@
     "@iconify/tools": "^4.0.7",
     "jszip": "^3.10.1"
   },
-  "gitHead": "c18d54b85389fb6310ac6fa42e0a8736fa7d4c90"
+  "gitHead": "d9fac69a3daa0096a9cb27470f6c912bd0f846ad"
 }
