--- a/packages/stencil-lib/package.json
+++ b/packages/stencil-lib/package.json
@@ -31,7 +31,8 @@
     "test": "stencil test --spec --e2e",
     "test.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
-    "stencil": "stencil"
+    "stencil": "stencil",
+    "prepublishOnly": "npx cpx package_dist.json \"./dist/package.json\" && npx cpx *.md \"./dist\""
   },
   "dependencies": {
     "@floating-ui/dom": "^1.6.11",
@@ -66,5 +67,5 @@
     "@innomotics/brand-experience-icons": "^0.0.2-beta-13"
   },
   "license": "MIT",
-  "gitHead": "d9fac69a3daa0096a9cb27470f6c912bd0f846ad"
+  "gitHead": "fa19ab344cc2d06832fdbfa4fd6428f066d4e7d2"
 }
